--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  get: ^3.5.1
-  firebase_core: ^0.5.0
-  firebase_auth: ^0.18.0+1
-  shared_preferences: ^0.5.10
-  cloud_firestore: ^0.14.0+2
+  get: ^3.24.0
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  shared_preferences: ^0.5.12+4
+  cloud_firestore: ^0.14.4
 
 dev_dependencies:
   flutter_test:
@@ -58,17 +58,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Signika
+      fonts:
+        - asset: assets/fonts/Signika-Regular.ttf
+        - asset: assets/fonts/Signika-Bold.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
