--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  get: ^3.24.0
-  firebase_core: ^0.5.3
-  firebase_auth: ^0.18.4+1
-  shared_preferences: ^0.5.12+4
   cloud_firestore: ^0.14.4
+  cupertino_icons: ^0.1.3
+  firebase_auth: ^0.18.4+1
+  firebase_core: ^0.5.3
+  font_awesome_flutter: ^8.11.0
+  get: ^3.24.0
+  provider: ^4.3.2+3
+  shared_preferences: ^0.5.12+4
+  circular_reveal_animation: ^1.1.5
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +64,5 @@ flutter:
         - asset: assets/fonts/Signika-Regular.ttf
         - asset: assets/fonts/Signika-Bold.ttf
           weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
